# project_oso_forecasting

./: README.md  app.py  auto_prediction_saver.py  config.py  create_icon.py  data_loader.py  demo.ipynb.py  main.py  model.py  ozone_model.py  predictor.py  pyproject.toml  requirements.txt  run.bat  trainer.py  utils.py  view_logs.py
config/: model_config.yaml.py
data/predictions/: ОСО_predict.csv  ОСО_predict.json
experiments/: model_comparison.py
modules/: neural_network.py
src/: config.py  data_loader.py  logger_config.py  model.py  predictor.py  preprocessing.py  trainer.py  visualizer.py
src/data/: loader.py
src/data_processing/: load_data.py  preprocess.py  split_data.py
src/model/: build_model.py  evaluate.py  train.py
src/utils/: config.py  logger.py
src/visualization/: plot_results.py
templates/: index.html  index.html.py
utils/: data_loader.py  logger.py
