[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oso-forecasting"
version = "0.1.0"
description = "Прогнозирование общего содержания озона (ОСО) с использованием нейронных сетей"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.2.2",
    "tensorflow>=2.12.0"
]

[project.scripts]
oso-forecast = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]